add templates